Add google sign in & store user information at mongoDB

--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 PORT=4000
+CLIENT_ID=415867045926-s2tigls6db0motppp4d5ed9k3bhq3pom.apps.googleusercontent.com
+CLIENT_SECRET=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
+CALLBACK_URL=http://localhost:4000/oauth/google/callback
+MONGODB_URI=mongodb+srv://vuongbachdoan:healer1417NORMA!!!@cluster0.0tgxh.mongodb.net/music
