--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
   "author": "vuongbachdoan",
   "license": "ISC",
   "dependencies": {
+    "cookie-session": "^2.0.0",
+    "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "mongoose": "^6.7.0",
     "nodemon": "^2.0.20",
-    "passport": "^0.6.0"
+    "passport": "^0.6.0",
+    "passport-google-oidc": "^0.1.0",
+    "passport-local": "^1.0.0"
   }
 }
