Add config facebook

--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ CLIENT_ID=415867045926-s2tigls6db0motppp4d5ed9k3bhq3pom.apps.googleusercontent.c
 CLIENT_SECRET=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
 CALLBACK_URL=http://localhost:4000/oauth/google/callback
 MONGODB_URI=mongodb+srv://vuongbachdoan:healer1417NORMA!!!@cluster0.0tgxh.mongodb.net/music
+FACEBOOK_SECRET_KEY=5a3c13b0d4b012951657ea39fc6994ba
+FACEBOOK_ID=454618493321414
+CALLBACK_URL_FACEBOOK=http://localhost:4000/oauth/facebook/callback
