--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "mongoose": "^6.7.0",
     "nodemon": "^2.0.20",
     "passport": "^0.6.0",
+    "passport-facebook": "^3.0.0",
     "passport-google-oidc": "^0.1.0",
     "passport-local": "^1.0.0"
   }
