--- a/.env
+++ b/.env
@@ -6,3 +6,6 @@ MONGODB_URI=mongodb+srv://vuongbachdoan:healer1417NORMA!!!@cluster0.0tgxh.mongod
 FACEBOOK_SECRET_KEY=5a3c13b0d4b012951657ea39fc6994ba
 FACEBOOK_ID=454618493321414
 CALLBACK_URL_FACEBOOK=http://localhost:4000/oauth/facebook/callback
+
+# Config client side
+APP_PORT=http://localhost:4200
