--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "vuongbachdoan",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.1",
     "cookie-session": "^2.0.0",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
